--- a/lib/template/runner.html
+++ b/lib/template/runner.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Sea.js Test Suite</title>
-<link rel="stylesheet" href="style.css?v=20130216.css"/>
+<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <div id="container">
@@ -18,6 +18,7 @@
   <label for="hide-pass">Hide passed</label>
   <p id="info"></p>
 </div>
-<script src="page-runner.js?v=20130216.js"></script>
+<script src="meta.js"></script>
+<script src="page-runner.js"></script>
 </body>
 </html>
